--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "botman/botman": "~2.1",
-        "mpociot/slack-client": "0.3.*"
+        "botman/botman": "~2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
